...
"chars" = "chars";
"action.done" = "Done";
"action.cancel" = "Cancel";
"action.delete" = "Delete";
"action.discard" = "Discard";
"action.add" = "Add";
"action.save" = "Save";
"action.ok" = "OK";
"action.got_it" = "Got it";
"action.copy" = "Copy";
"alert.title" = "Notice";
"action.use_as_script" = "Use as Script";
"action.share" = "Share";
...
